# Job-Portal

./: PRODUCT_OVERVIEW.md  README.md
Backend/: .env  .env.example  .gitignore  BACKEND_CONTEXT.md  Dockerfile  alembic.ini  dev_seed.py  docker-compose.yml  pyproject.toml
Backend/alembic/: env.py
Backend/alembic/versions/: 0001_init.py
Backend/app/: main.py  seed.py
Backend/app/core/: config.py  deps.py  security.py
Backend/app/models/: __init__.py  application.py  approval.py  contact_request.py  employer_profile.py  faq.py  job.py  password_reset_token.py  student_profile.py  success_story.py  system_log.py  user.py
Backend/app/routers/: admin.py  applications.py  auth.py  contact.py  content.py  faq.py  jobs.py  matches.py  password_reset.py  users.py
Backend/app/schemas/: admin.py  application.py  approval.py  auth.py  contact.py  content.py  faq.py  job.py  user.py
Backend/app/services/: ai_client.py  ai_moderator.py  email.py  embeddings.py  matcher.py  resume_parser.py  skills_vocab.py
Backend/tests/: conftest.py  test_auth.py
Job Project/: .env.example  README.md  index.html  package-lock.json  vercel.json
Job Project/src/app/: App.tsx  routes.tsx
Job Project/src/app/components/: AdminConsole.tsx  Auth.tsx  ContactAdmin.tsx  DevLogin.tsx  EmployerDashboard.tsx  ForgotPassword.tsx  HelpCenter.tsx  Home.tsx  Layout.tsx  MyApplications.tsx  Pricing.tsx  PrivacyPolicy.tsx  Profile.tsx  ResetPassword.tsx  StudentDashboard.tsx  SuccessStories.tsx  TermsOfService.tsx
Job Project/src/app/context/: AuthContext.tsx
Job Project/src/app/lib/: api.ts
